tests/cases/errors/unmatched_end.tex
\begin{document}
    Contenuto
\end{article}
